# ceppengine

./: .gitignore  CeppEngine.pro  LICENSE  README.md
assets/: background.sprite  enemy1.sprite  enemy2.sprite  enemy3.sprite  enemy_alive.spriteanim  enemy_dead.sprite  enemy_dead.spriteanim  grass.sprite  player_idle.sprite  player_idle.spriteanim  player_shoot.spriteanim  player_shoot1.sprite  player_shoot2.sprite  projectile.sprite  projectile_explosion.sprite  red.material  red.shader  testanim.spriteanim  tree.sprite
ceppengine/: CMakeLists.txt  CeppEngine.pro
ceppengine/src/ceppengine/: engine.cpp  engine.h  gameobject.cpp  gameobject.h  global.h  object.cpp  object.h  scene.cpp  scene.h
ceppengine/src/ceppengine/assets/: asset.cpp  asset.h  assetloader.cpp  assetloader.h  audioclip.cpp  audioclip.h  default.cpp  default.h  font.cpp  font.h  material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h  sprite.cpp  sprite.h  spriteanimation.cpp  spriteanimation.h  texture.cpp  texture.h
ceppengine/src/ceppengine/assets/importers/: assetimporter.cpp  assetimporter.h  audioimporter.cpp  audioimporter.h  fontimporter.cpp  fontimporter.h  jsonimporter.cpp  jsonimporter.h  meshimporter.cpp  meshimporter.h  shaderimporter.cpp  shaderimporter.h  textureimporter.cpp  textureimporter.h
ceppengine/src/ceppengine/components/: component.cpp  component.h
ceppengine/src/ceppengine/components/animation/: spriteanimator.cpp  spriteanimator.h
ceppengine/src/ceppengine/components/audio/: audiosource.cpp  audiosource.h
ceppengine/src/ceppengine/components/rendering/: camera.cpp  camera.h  meshrenderer.cpp  meshrenderer.h  spriterenderer.cpp  spriterenderer.h
ceppengine/src/ceppengine/components/ui/: uitext.cpp  uitext.h
ceppengine/src/ceppengine/math/: angle.cpp  lrand.cpp  lrand.h  math.cpp  math.h  matrix4.cpp  matrix4.h  transform.h  vector3.cpp  vector3.h
ceppengine/src/ceppengine/modules/: audiomodule.cpp  audiomodule.h  filemodule.cpp  filemodule.h  inputmodule.cpp  inputmodule.h  module.cpp  module.h  rendermodule.cpp  rendermodule.h  runtimemodule.cpp  runtimemodule.h
ceppengine/src/ceppengine/modules/audio/: openalaudiomodule.cpp  openalaudiomodule.h  portaudiomodule.cpp  portaudiomodule.h
ceppengine/src/ceppengine/modules/gles/: glesrendermodule.cpp  glesrendermodule.h
ceppengine/src/ceppengine/modules/gles/EGL/: egl.h  eglQCOM.h  eglext.h  eglplatform.h
ceppengine/src/ceppengine/modules/gles/GLES/: glext.h  glplatform.h
ceppengine/src/ceppengine/modules/gles/GLES2/: gl2ext.h
ceppengine/src/ceppengine/modules/windows/: windowsfilemodule.cpp  windowsfilemodule.h  windowsinputmodule.cpp  windowsinputmodule.h  winruntimemodule.cpp  winruntimemodule.h
ceppengine/src/ceppengine/util/: color.cpp  color.h  ref.h
demo/: CMakeLists.txt  demo.pro  main.cpp
demo/src/: main.cpp
demo/src/components/: aimatcursor.cpp  aimatcursor.h  delayeddestruction.cpp  delayeddestruction.h  enemy.cpp  enemy.h  enemyspawner.cpp  enemyspawner.h  fpsprint.cpp  fpsprint.h  playeranimations.cpp  playeranimations.h  playermovement.cpp  playermovement.h  playerweapon.cpp  playerweapon.h  playonpress.cpp  playonpress.h  projectile.cpp  projectile.h  rotator.cpp  rotator.h  score.cpp  score.h
src/: main.cpp
src/math/: angle.h  lrand.h  math.cpp  math.h  transform.cpp  vector3.cpp
